horizontal scrollbar appearance fixed

--- a/src/style.scss
+++ b/src/style.scss
@@ -148,7 +148,6 @@ body {
 
 section {
   @include flex(center);
-  width: 100vw;
 }
 
 .divider {
